--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,7 @@
 <div>
   <button>
-    <img [src]="'users/'+selectedUser.avatar" />
+    <img [src]="imagepath"  [alt]="selectedUser.name"/>
     <span>{{ selectedUser.name }}</span>
+
   </button>
 </div>
