--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,8 @@
 <div>
-  <button (click)="selectUser()">
-    <img [src]="imagepath()" 
-    [alt]="selectedUser().name"/>
-    <span>{{ selectedUser().name }}</span>
-
+  <button (click)="onSelectUser()">
+    <img [src]="imagePath" alt="name" />
+    <span>
+      {{ name }}
+    </span>
   </button>
 </div>
