--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,11 @@
 <app-header />
 <main>
   <ul id="users">
+    @for (user of users; track user.id) {
     <li>
-      <app-user [users]="users[0]" (select)="onSelectUser($event)" />
+      <app-user [users]="user" (select)="onSelectUser($event)" />
     </li>
-
-    <li>
-      <app-user [users]="users[1]" (select)="onSelectUser($event)" />
-    </li>
-
-    <li>
-      <app-user [users]="users[2]" (select)="onSelectUser($event)" />
-    </li>
-
-    <li>
-      <app-user [users]="users[3]" (select)="onSelectUser($event)" />
-    </li>
+  }
   </ul>
 
   <app-tasks [name]="selectedUser ? selectedUser.name : ''" />
