--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,8 @@
 <div>
   <button (click)="onSelectUser()">
-    <img [src]="imagePath" [alt]="users.name"/>
+    <img [src]="imagePath" [alt]="users?.name"/>
     <span>
-      {{ users.name }}
+      {{ users?.name }}
     </span>
   </button>
 </div>
