--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,16 @@
 <app-header />
 <main>
   <ul id="users">
-    <!-- @for (user of users; track user.id) { -->
-    <li *ngFor="let user of users; let i = index">
+    @for (user of users; track user.id) {
+    <li>
       <app-user [users]="user" (select)="onSelectUser($event)" />
     </li>
-    <!-- } -->
+    }
   </ul>
 
-  <!-- @if (selectedUser) { -->
-  <app-tasks *ngIf="selectedUser; else fallback " [name]="selectedUser.name" />
-  <!-- } @else { -->
-  <!-- <p id="fallback">Select User to see their task!</p> -->
-  <!-- } -->
-
-  <ng-template #fallback>
-    <p id="fallback">Select a user to see their tasks!</p>
-  </ng-template>
+  @if (selectedUser) {
+  <app-tasks [name]="selectedUser.name" />
+  } @else {
+  <p id="fallback">Select User to see  their task!</p>
+  }
 </main>
