--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <ul id="users">
     @for (user of users; track user.id) {
     <li>
-      <app-user [users]="user" (select)="onSelectUser($event)" />
+      <app-user [selected]="user.id === selectedUserId" [users]="user" (select)="onSelectUser($event)" />
     </li>
     }
   </ul>
