--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,8 @@
-<div>
+<app-card>
   <button  [class.active]="selected" (click)="onSelectUser()">
     <img [src]="imagePath" [alt]="users?.name"/>
     <span>
       {{ users?.name }}
     </span>
   </button>
-</div>
+</app-card>
